Create Force-Directed Tree Visualization
Adds a new API endpoint `/api/latest_snapshot_tree` that returns a file tree visualization based on the latest snapshot data. It also includes the necessary JavaScript code (`main.js`) to fetch and render the tree using D3.js.

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Chronicle Visualizations</h1>
-    <div id="visualization">Loading...</div>
+    <div id="visualization">Loading timeline...</div>
+    <h2>File Tree Visualization (Latest Snapshot)</h2>
+    <div id="tree-visualization">Loading file tree...</div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/main.js"></script>
 </body>
