--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Chronicle Visualizations</h1>
     <div id="visualization">Loading timeline...</div>
-    <h2>File Tree Visualization (Latest Snapshot)</h2>
+    <h2>Force-Directed File Tree Visualization (Latest Snapshot)</h2>
     <div id="tree-visualization">Loading file tree...</div>
+    <h2>Radial Tree Visualization (Latest Snapshot)</h2>
+    <div id="radial-tree-visualization">Loading radial tree...</div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="/main.js"></script>
 </body>
